force-app/main/default/objects/recTypesPEP__c/recTypesPEP__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Record Types - PEP</label>
</CustomObject>