force-app/main/default/objects/recTypesPEP__c/fields/Beneficial_Owner_Direct_PEP__c.field-meta.xml
<CustomField>
    <fullName>Beneficial_Owner_Direct_PEP__c</fullName>
    <label>Beneficial Owner Direct PEP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>