force-app/main/default/objects/recTypesPEP__c/fields/Director_Direct_PEP__c.field-meta.xml
<CustomField>
    <fullName>Director_Direct_PEP__c</fullName>
    <label>Director Direct PEP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>