force-app/main/default/objects/recTypesPEP__c/fields/Registration_Direct_PEP__c.field-meta.xml
<CustomField>
    <fullName>Registration_Direct_PEP__c</fullName>
    <label>Registration Direct PEP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>