force-app/main/default/objects/recTypesPEP__c/fields/Registration_Indirect_PEP__c.field-meta.xml
<CustomField>
    <fullName>Registration_Indirect_PEP__c</fullName>
    <label>Registration Indirect PEP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>